--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body{
     box-sizing: border-box;
     font-family: sans-serif;
-}
-div{
-    margin: 100px;
+    width:100vw;
+    height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    overflow:hidden;
 }
 .button{
     appearance: none;
